--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 
+
 .jumbotron {
      padding-top: 0px !important ;
      padding-bottom: 0px !important; 
     margin-bottom: 30px;
     color: inherit;
     background-color: #eee;
+     padding-left: 30px;
+    padding-right: 30px;
+    margin: 0 auto;
 }
 .sign-in{
     font-size: 16px;
@@ -16,38 +20,42 @@
     color: #8d448b;
     padding: 8px 24px;
     margin-top: 3px;
+    margin-left:40px ; 
+    
+}
+.navbar-nav{
+    padding-left: 120px !important;
+    padding-right: 30px;
+
 }
 .sign-in:hover{
     background-color: #8d448b;
-    color: #ffffff;
+    color:lightgray;
 }
-.active{--theme-ui-colors-border_color: #E9EDF5;
-    --theme-ui-colors-primary: #8D448B;
-    --theme-ui-colors-secondary: #793677;
-    --theme-ui-colors-black: #0F2137;
-    --theme-ui-colors-gray: #F8FAFC;
-    --theme-ui-colors-muted: #7B8188;
-    --theme-ui-colors-accent: #609;
-    color: var(--theme-ui-colors-text);
- }
 
-.container{
-    text-align: center;
-}
 .navbar-brand
 {box-sizing: border-box;
     margin: 0;
     min-width: 0;
     font-family: Shizuru,cursive;
     font-weight: 700;
+    margin-right: 30px;
 }
-h1{
-    display: block;
-    font-size: 1.17em;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+
+
+ .btn-sub{
+background-color: #8d448b;
+color: lightgray;
+
+
  }
+
+ img{
+     position: absolute;
+     object-position: center;
+     transition:cubic-bezier();
+     object-fit: cover;
+     opacity: 1;
+ }
+ 
  
